# job-hunt

./: .dockerignore  .env.example  .gitignore  CHANGELOG-DEV.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Jenkinsfile  README.md  actor-config.json  backfill.py  build_actor_configs.py  celery_app.py  config.py  docker-compose.yml  entrypoint.sh  example.actor-config.json  llm.py  local_scrapers.py  locations.json  locations.py  main.py  matching.py  openapi.yaml  outputs.py  persistence.py  pyproject.toml  ranker.py  ranking_audit_report.md  requirements.txt  scrapers.py  system-prompt.txt  test_llm.py  user-profiles.json
backend/: Dockerfile  entrypoint.sh  requirements.txt
extension/: .gitignore  CHANGELOG.md  LOADING.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/: .env.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
japan-tech-scraper/: README.md  actor.json
prompts/: batch_ranker.txt  formatter.txt  ranker.txt
scratch/: analyze_ranking.py  audit_rankings.py  check_tokyo_dev_db.py  debug_extractors.py  dump_html.py  extract_jobs_for_audit.py  findy.html  gaijinpot.html  inspect_japandev.py  scrape_to_json.py  test_all_scrapers.py  test_categories.py  test_cloudscraper.py  test_detail.py  test_extractors.py  test_high_throughput.py  test_high_throughput2.py  test_high_throughput3.py  test_language_override.py  test_local_scrapers.py  test_matching.py  test_more_scrapers.py  test_new_scrapers.py  test_pipeline.py  test_ranking_integration.py  test_recruiters.py  test_scrape.py  test_scrape_bs4.py  verify_normalization.py
tasks/: formatting.py  pipeline.py  (+2 more)
(+152 files in other folders)
