[project]
name = "job-hunt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "celery[redis]>=5.4",
    "anyio==4.13.0",
    "apify-client>=1.6",
    "apify-shared==1.1.2",
    "certifi==2026.5.20",
    "cloudscraper>=1.2.71",
    "colorama==0.4.6",
    "distro==1.9.0",
    "django>=5.1,<5.2",
    "django-filter>=24.0",
    "djangorestframework>=3.15",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.16",
    "jiter==0.15.0",
    "mysqlclient>=2.2",
    "openai>=1.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "requests>=2.31",
    "sniffio==1.3.1",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "django-celery-beat>=2.9.0",
    "flower>=2.0.1",
]
